infra/k8s-prod/cold-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cold-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cold-mongo
  template:
    metadata:
      labels:
        app: cold-mongo
    spec:
      containers:
        - name: cold-mongo
          image: mongo
          volumeMounts:
          - mountPath: "/data/db"
            name: mongo-db
      volumes:
        - name: mongo-db
          persistentVolumeClaim:
            claimName: mongodb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cold-mongo-srv
spec:
  selector:
    app: cold-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
