infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: portal-srv
spec:
  rules:
    - host: kwantatrader.com
      http:
        paths:
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: portal-srv
                port: 
                  number: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: grafana.kwantatrader.com
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port: 
                  number: 80
